--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       <meta name="description" content="{{ site.description }}">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css" />
       <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
   </head>
 
@@ -68,7 +68,7 @@
     </div>
     {% comment %} site-wrapper {% endcomment %}
 
-    <script src="{{ site.baseurl }}/js/main.js"></script>
+    <script src="js/main.js"></script>
     {% comment %} Google Analytics {% endcomment %}
     {% if site.ga_tracking_id and site.ga_domain %}
       <script>
